<resources>
    <string name="title_activity_filter_show">Photo Editor</string>
    <string name="cannot_load_image">Cannot load the image!</string>
    <string name="original_picture_text">@string/original</string>
    <string name="original">Original</string>
    <string name="borders">Borders</string>
    <string name="filtershow_undo">Undo</string>
    <string name="filtershow_redo">Redo</string>
    <string name="show_history_panel">Show History</string>
    <string name="hide_history_panel">Hide History</string>
    <string name="show_imagestate_panel">Show Image State</string>
    <string name="hide_imagestate_panel">Hide Image State</string>
    <string name="menu_settings">Settings</string>
    <string name="history">History</string>
    <string name="reset">Reset</string>
    <string name="history_original">@string/original</string>
    <string name="imageState">Current Image State</string>
    <string name="compare_original">Compare</string>
    <string name="apply_effect">Apply</string>
    <string name="reset_effect">Reset</string>
    <string name="aspect">Aspect</string>
    <string name="aspect1to1_effect">1:1</string>
    <string name="aspect4to3_effect">4:3</string>
    <string name="aspect3to4_effect">3:4</string>
    <string name="aspect4to6_effect">4:6</string>
    <string name="aspect5to7_effect">5:7</string>
    <string name="aspect7to5_effect">7:5</string>
    <string name="aspect9to16_effect">16:9</string>
    <string name="aspectNone_effect">Freedom</string>
    <string name="aspectOriginal_effect">@string/original</string>
    <string name="tinyplanet">Tiny Planet</string>
    <string name="exposure">Exposure</string>
    <string name="sharpness">Sharpness</string>
    <string name="contrast">Contrast</string>
    <string name="vibrance">Vibrance</string>
    <string name="saturation">Saturation</string>
    <string name="bwfilter">BW Filter</string>
    <string name="wbalance">Autocolor</string>
    <string name="hue">Hue</string>
    <string name="shadow_recovery">Shadows</string>
    <string name="curvesRGB">Curves</string>
    <string name="vignette">Vignette</string>
    <string name="redeye">Red Eye</string>
    <string name="straighten">Straighten</string>
    <string name="crop">Crop</string>
    <string name="rotate">Rotate</string>
    <string name="mirror">Mirror</string>
    <string name="none">None</string>
    <string name="curves_channel_rgb">RGB</string>
    <string name="curves_channel_red">Red</string>
    <string name="curves_channel_green">Green</string>
    <string name="curves_channel_blue">Blue</string>
    <string name="frame_none">None</string>
    <string name="frame_classic">Classic</string>
    <string name="frame_nostalgia">Nostalgia</string>
    <string name="frame_black_edge">Black edge</string>
    <string name="frame_no_balck_angle">No angle</string>
    <string name="frame_white_edge">White edge</string>
    <string name="frame_no_white_angle">No angle</string>
    <string name="copy_title">copy</string>
    <string name="move_title">move</string>
    <string name="move_copy_fail">fail</string>
    <string name="newalbum_title">new album</string>
    <string name="create_new_folder">new folder</string>
    <string name="folder_name_not_criterion">new album name goes back on the name rule of folder</string>
    <string name="not_support_create_album">only move or copy statu can create new album</string>
    <string name="paste_title">Paste</string>
    <string name="cancel_paste_title">Cancel</string>
    <string name="photoeditor_name">Photo Studio</string>
    <string name="loading_failure">"Couldn't load the photo"</string>
    <string name="saving_failure">"Couldn't save edited photo"</string>
    <string name="photo_saved">Edited photo saved to %s</string>
    <string name="discard_unsaved_photo">Discard unsaved changes?</string>
    <string name="yes">Yes</string>
    <string name="autofix">Auto-fix</string>
    <string name="crossprocess">Cross-process</string>
    <string name="documentary">Documentary</string>
    <string name="doodle">Doodle</string>
    <string name="duotone">Duo-tone</string>
    <string name="facelift">Face Glow</string>
    <string name="facetan">Face Tan</string>
    <string name="filllight">Fill Light</string>
    <string name="fisheye">Fisheye</string>
    <string name="flip">Flip</string>
    <string name="grain">Film Grain</string>
    <string name="grayscale">B&amp;W</string>
    <string name="accessibility_black_and_white">Black and white</string>
    <string name="highlight">Highlights</string>
    <string name="lomoish">Lomo</string>
    <string name="negative">Negative</string>
    <string name="posterize">Posterize</string>
    <string name="sepia">Sepia</string>
    <string name="shadow">Shadows</string>
    <string name="sharpen">Sharpen</string>
    <string name="temperature">Warmth</string>
    <string name="tint">Tint</string>
    <string name="crop_tooltip">Drag markers to crop photo</string>
    <string name="doodle_tooltip">Draw on photo to doodle</string>
    <string name="flip_tooltip">Drag photo to flip it</string>
    <string name="redeye_tooltip">Tap on red eyes to remove them</string>
    <string name="rotate_tooltip">Drag photo to rotate it</string>
    <string name="straighten_tooltip">Drag photo to straighten it</string>
    <string name="photoeditor_exposure">Exposure effects</string>
    <string name="photoeditor_color">Color effects</string>
    <string name="photoeditor_artistic">Artistic effects</string>
    <string name="photoeditor_fix">Fix up</string>
    <string name="photoeditor_undo">Undo</string>
    <string name="photoeditor_redo">Redo</string>
    <string name="photoeditor_savepath">CoolPad/已修改图片</string>
    <string name="photoeditor_gif">"Couldn't edit gif picture"</string>
    <string name="app_name">Photos</string>
    <string name="vedio_name">Video</string>
    <string name="gadget_title">Picture frame</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="movie_view_label">Video player</string>
    <string name="loading_video">Loading video…</string>
    <string name="loading_image">Loading image…</string>
    <string name="loading_account">Loading account…</string>
    <string name="resume_playing_title">Resume video</string>
    <string name="resume_playing_message">Resume playing from %s ?</string>
    <string name="resume_playing_resume">Resume playing</string>
    <string name="loading">Loading…</string>
    <string name="fail_to_load">"Couldn't load"</string>
    <string name="fail_to_load_image">"Couldn't load the image"</string>
    <string name="no_thumbnail">No thumbnail</string>
    <string name="resume_playing_restart">Start over</string>
    <string name="crop_save_text">OK</string>
    <string name="set_image">Set picture as</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="share_panorama">Share panorama</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="details">Details</string>
    <string name="switch_to_camera">Switch to Camera</string>
    <string name="show_on_map">Show on map</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="edit">Edit</string>
    <string name="crop_action">Crop</string>
    <string name="sync_picasa_albums">Refresh</string>
    <string name="Import">Import</string>
    <string name="help">Help</string>
    <string name="save">Save</string>
    <string name="save_to_collect">Add to Favorite</string>
    <string name="show_album_on_map">mapview</string>
    <string name="move_to_securebox">Move to Safebox</string>
    <string name="remove_from_securebox">Remove from Securebox</string>
    <string name="private_mode_set">Set PrivateMode</string>
    <string name="private_mode_cancel">Cancel PrivateMode</string>
    <string name="move_picture">Move</string>
    <string name="copy_picture">Copy</string>
    <string name="new_album">New Album</string>
    <string name="pref_camera_id_title">Choose camera</string>
    <string name="pref_camera_id_default">0</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camcorder_settings_category">Camcorder settings</string>
    <string name="pref_camera_capturemode_title">Capture mode</string>
    <string name="pref_camera_capturemode_default">none</string>
    <string name="pref_camera_scenemode_default">auto</string>
    <string name="pref_camera_scenemode_title">Scene mode</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_effect_default">none</string>
    <string name="pref_camera_effect_title">Effect</string>
    <string name="pref_camera_selfCamera_title">Self Camera</string>
    <string name="pref_camera_selfCamera_default">1</string>
    <string name="pref_camera_continuemode_title">Burst Pictures</string>
    <string name="pref_camera_continuemode_default">0</string>
    <string name="pref_camera_delay_default">0</string>
    <string name="pref_camera_delay_title">Delay</string>
    <string name="pref_camera_iso_title">ISO</string>
    <string name="pref_camera_iso_default">0</string>
    <string name="pref_camera_saturation_title">Saturation</string>
    <string name="pref_camera_saturation_default">2</string>
    <string name="pref_camera_exposure_title">Exposure</string>
    <string name="pref_camera_exposure_default">0</string>
    <string name="pref_camera_contrast_title">Contrast</string>
    <string name="pref_camera_contrast_default">2</string>
    <string name="pref_camera_grid_line_title">Composition</string>
    <string name="pref_camera_grid_line_default">0</string>
    <string name="pref_camera_secure_box_default">0</string>
    <string name="pref_camera_secure_box_title">Secure Box</string>
    <string name="pref_camera_storage_path_title">Storage Path</string>
    <string name="pref_camera_storage_path_default">external</string>
    <string name="pref_camera_restore_title">Restore</string>
    <string name="pref_camera_restore_default">0</string>
    <string name="pref_camera_jpegquality_title">Picture quality</string>
    <string name="pref_camera_jpegquality_default">2</string>
    <string name="pref_camera_picturesize_default">4208x2368</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_flashmode_default">off</string>
    <string name="pref_camera_flashmode_title">Video Flash mode</string>
    <string name="pref_camera_recordlocation_title">Store location</string>
    <string name="pref_camera_recordlocation_default">none</string>
    <string name="pref_camera_videosize_title">Video size</string>
    <string name="pref_camera_videosize_default">720x480</string>
    <string name="pref_camera_outputformat_default">2</string>
    <string name="pref_camera_outputformat_title">Output format</string>
    <string name="pref_camera_video_duration_default">60</string>
    <string name="pref_camera_video_duration_title">Video duration</string>
    <string name="pref_camera_video_stabilization_default">off</string>
    <string name="pref_camera_video_stabilization_title">Video Stability</string>
    <string name="pref_camera_scene_detect_default">on</string>
    <string name="pref_camera_scene_detect_title">Scene Detect</string>
    <string name="pref_camera_video_flashmode_default">off</string>
    <string name="pref_camera_faceCamera_title">Face Camera</string>
    <string name="pref_camera_faceCamera_default">none</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="rename">rename</string>
</resources>