<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_ptp_holo_light" android:id="@id/action_import" android:visible="false" android:title="@string/Import" android:showAsAction="always|withText" />
    <item android:icon="@drawable/ic_menu_share_holo_light" android:id="@id/action_share_panorama" android:visible="false" android:title="@string/share_panorama" android:showAsAction="ifRoom" android:actionProviderClass="android.widget.ShareActionProvider" />
    <item android:icon="@drawable/ic_menu_share_holo_light" android:id="@id/action_share" android:visible="false" android:title="@string/share" android:showAsAction="never" android:actionProviderClass="android.widget.ShareActionProvider" />
    <item android:icon="@drawable/ic_menu_trash_holo_light" android:id="@id/action_delete" android:visible="false" android:title="@string/delete" android:showAsAction="ifRoom" />
    <item android:id="@id/action_edit" android:visible="false" android:title="@string/edit" android:showAsAction="never" />
    <item android:id="@id/action_rotate_ccw" android:visible="false" android:title="@string/rotate_left" android:showAsAction="never" />
    <item android:id="@id/action_rotate_cw" android:visible="false" android:title="@string/rotate_right" android:showAsAction="never" />
    <item android:id="@id/action_crop" android:visible="false" android:title="@string/crop_action" android:showAsAction="never" />
    <item android:id="@id/action_setas" android:visible="false" android:title="@string/set_image" android:showAsAction="never" />
    <item android:id="@id/action_save_to_collect" android:visible="false" android:title="@string/save_to_collect" android:showAsAction="never" />
    <item android:id="@id/action_move_to_securebox" android:visible="false" android:title="@string/move_to_securebox" android:showAsAction="never" />
    <item android:id="@id/action_remove_from_securebox" android:visible="false" android:title="@string/remove_from_securebox" android:showAsAction="never" />
    <item android:id="@id/action_set_private_file" android:visible="false" android:title="@string/private_mode_set" android:showAsAction="never" />
    <item android:id="@id/action_cancel_private_file" android:visible="false" android:title="@string/private_mode_cancel" android:showAsAction="never" />
    <item android:icon="@drawable/ic_menu_info_details" android:id="@id/action_details" android:visible="false" android:title="@string/details" android:showAsAction="never" />
    <item android:id="@id/action_show_on_map" android:visible="false" android:title="@string/show_on_map" android:showAsAction="never" />
    <item android:id="@id/action_move_picture" android:visible="false" android:title="@string/move_picture" android:showAsAction="never" />
    <item android:id="@id/action_copy_picture" android:visible="false" android:title="@string/copy_picture" android:showAsAction="never" />
    <item android:id="@id/action_save_other_pic" android:visible="false" android:title="@string/save" android:showAsAction="never" />
    <item android:id="@id/action_copytoclip" android:visible="false" android:title="@string/copy_to_clipboard" android:showAsAction="never" />
    <item android:id="@id/action_select_all" android:visible="false" android:title="@string/select_all" android:showAsAction="always" />
    <item android:id="@id/action_deselect_all" android:visible="false" android:title="@string/deselect_all" android:showAsAction="always" />
    <item android:id="@id/action_rename" android:visible="false" android:title="@string/rename" android:showAsAction="never" />
</menu>