<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup camera:type="NormalSetting" camera:title="@string/pref_camera_settings_category"
  xmlns:camera="http://schemas.android.com/apk/res/com.android.gallery3d">
    <IconListPreference camera:title="@string/pref_camera_scenemode_title" camera:persist="false" camera:key="pref_camera_scenemode_key" camera:defaultValue="@string/pref_camera_scenemode_default" camera:entryValues="@array/pref_camera_scenemode_entryvalues" camera:entries="@array/pref_camera_scenemode_entries" camera:icons="@array/pref_camera_scenemode_icons" />
    <IconListPreference camera:title="@string/pref_camera_whitebalance_title" camera:persist="false" camera:key="pref_camera_whitebalance_key" camera:defaultValue="@string/pref_camera_whitebalance_default" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:entries="@array/pref_camera_whitebalance_entries" camera:icons="@array/whitebalance_icons" />
    <RecordLocationPreference camera:title="@string/pref_camera_recordlocation_title" camera:persist="true" camera:key="pref_camera_recordlocation_key" camera:defaultValue="@string/pref_camera_recordlocation_default" camera:entryValues="@array/pref_camera_recordlocation_entryvalues" camera:entries="@array/pref_camera_recordlocation_entries" camera:icons="@array/pref_camera_recordlocation_icons" />
    <IconListPreference camera:title="@string/pref_camera_delay_title" camera:persist="false" camera:key="pref_camera_delay_key" camera:defaultValue="@string/pref_camera_delay_default" camera:entryValues="@array/pref_camera_delay_entryvalues" camera:entries="@array/pref_camera_delay_entries" camera:icons="@array/pref_camera_delay_icons" />
    <IconListPreference camera:title="@string/pref_camera_continuemode_title" camera:persist="false" camera:key="pref_camera_continuemode_key" camera:defaultValue="@string/pref_camera_continuemode_default" camera:entryValues="@array/pref_camera_continuemode_entryvalues" camera:entries="@array/pref_camera_continuemode_entries" camera:icons="@array/pref_camera_continuemode_icons" />
    <IconListPreference camera:title="@string/pref_camera_picturesize_title" camera:persist="true" camera:key="pref_camera_picturesize_key" camera:defaultValue="@string/pref_camera_picturesize_default" camera:entryValues="@array/pref_camera_picturesize_entryvalues" camera:entries="@array/pref_camera_picturesize_entries" camera:icons="@array/pref_camera_picturesize_icons" />
    <IconListPreference camera:title="@string/pref_camera_videosize_title" camera:persist="true" camera:key="pref_camera_videosize_key" camera:defaultValue="@string/pref_camera_videosize_default" camera:entryValues="@array/pref_camera_videosize_entryvalues" camera:entries="@array/pref_camera_videosize_entries" camera:icons="@array/pref_camera_videosize_icons" />
    <IconListPreference camera:title="@string/pref_camera_video_duration_title" camera:persist="false" camera:key="pref_camera_video_duration_key" camera:defaultValue="@string/pref_camera_video_duration_default" camera:entryValues="@array/pref_camera_video_duration_entryvalues" camera:entries="@array/pref_camera_video_duration_entries" camera:icons="@array/pref_camera_vide_duration_icons" />
    <IconListPreference camera:title="@string/pref_camera_video_stabilization_title" camera:persist="false" camera:key="pref_camera_video_stabilization_key" camera:defaultValue="@string/pref_camera_video_stabilization_default" camera:entryValues="@array/pref_camera_video_stabilization_entryvalues" camera:entries="@array/pref_camera_video_stabilization_entries" />
    <IconListPreference camera:title="@string/pref_camera_scene_detect_title" camera:persist="false" camera:key="pref_camera_scene_detect_key" camera:defaultValue="@string/pref_camera_scene_detect_default" camera:entryValues="@array/pref_camera_scene_detect_entryvalues" camera:entries="@array/pref_camera_scene_detect_entries" />
    <IconListPreference camera:title="@string/pref_camera_outputformat_title" camera:persist="true" camera:key="pref_camera_outputformat_key" camera:defaultValue="@string/pref_camera_outputformat_default" camera:entryValues="@array/pref_camera_outputformat_entryvalues" camera:entries="@array/pref_camera_outputformat_entries" camera:icons="@array/pref_camera_outputformat_icons" />
    <IconListPreference camera:title="@string/pref_camera_storage_path_title" camera:persist="true" camera:key="pref_camera_storage_path_key" camera:defaultValue="@string/pref_camera_storage_path_default" camera:entryValues="@array/pref_camera_storage_path_entryvalues" camera:entries="@array/pref_camera_storage_path_entries" />
    <IconListPreference camera:title="@string/pref_camera_iso_title" camera:persist="true" camera:key="pref_camera_iso_key" camera:defaultValue="@string/pref_camera_iso_default" camera:entryValues="@array/pref_camera_iso_entryvalues" camera:entries="@array/pref_camera_iso_entries" camera:icons="@array/pref_camera_iso_icons" />
    <IconListPreference camera:title="@string/pref_camera_saturation_title" camera:persist="true" camera:key="pref_camera_saturation_key" camera:defaultValue="@string/pref_camera_saturation_default" camera:entryValues="@array/pref_camera_saturation_entryvalues" camera:entries="@array/pref_camera_saturation_entries" />
    <IconListPreference camera:title="@string/pref_camera_contrast_title" camera:persist="true" camera:key="pref_camera_contrast_key" camera:defaultValue="@string/pref_camera_contrast_default" camera:entryValues="@array/pref_camera_contrast_entryvalues" camera:entries="@array/pref_camera_contrast_entries" />
    <IconListPreference camera:title="@string/pref_camera_exposure_title" camera:persist="true" camera:key="pref_camera_exposure_key" camera:defaultValue="@string/pref_camera_exposure_default" camera:entryValues="@array/pref_camera_exposure_entryvalues" camera:entries="@array/pref_camera_exposure_entries" />
    <IconListPreference camera:title="@string/pref_camera_jpegquality_title" camera:persist="true" camera:key="pref_camera_jpegquality_key" camera:defaultValue="@string/pref_camera_jpegquality_default" camera:entryValues="@array/pref_camera_jpegquality_entryvalues" camera:entries="@array/pref_camera_jpegquality_entries" camera:icons="@array/pref_camera_jpegquality_icons" />
    <IconListPreference camera:title="@string/pref_camera_grid_line_title" camera:persist="true" camera:key="pref_camera_grid_line_key" camera:defaultValue="@string/pref_camera_grid_line_default" camera:entryValues="@array/pref_camera_grid_line_entryvalues" camera:entries="@array/pref_camera_grid_line_entries" camera:icons="@array/pref_camera_grid_line_icons" />
    <IconListPreference camera:title="@string/pref_camera_secure_box_title" camera:persist="true" camera:key="pref_camera_secure_box_key" camera:defaultValue="@string/pref_camera_secure_box_default" camera:entryValues="@array/pref_camera_secure_box_entryvalues" camera:entries="@array/pref_camera_secure_box_entries" camera:icons="@array/pref_camera_secure_box_icons" />
    <IconListPreference camera:title="@string/pref_camera_restore_title" camera:persist="false" camera:key="pref_camera_restore_key" camera:defaultValue="@string/pref_camera_restore_default" camera:entryValues="@array/pref_camera_restore_entryvalues" camera:entries="@array/pref_camera_restore_entries" camera:icons="@array/pref_camera_restore_icons" />
    <IconListPreference camera:title="@string/pref_camera_effect_title" camera:visible="false" camera:persist="false" camera:key="pref_camera_effect_key" camera:defaultValue="@string/pref_camera_effect_default" camera:entryValues="@array/pref_camera_effect_entryvalues" camera:entries="@array/pref_camera_effect_entries" camera:icons="@array/pref_camera_effect_icons" />
    <IconListPreference camera:title="@string/pref_camera_flashmode_title" camera:visible="false" camera:persist="true" camera:key="pref_camera_flashmode_key" camera:defaultValue="@string/pref_camera_flashmode_default" camera:entryValues="@array/pref_camera_flashmode_entryvalues" camera:entries="@array/pref_camera_flashmode_entries" camera:icons="@array/camera_flashmode_icons" />
    <IconListPreference camera:title="@string/pref_camera_focusmode_title" camera:visible="false" camera:persist="false" camera:key="pref_camera_focusmode_key" camera:defaultValue="@array/pref_camera_focusmode_default_array" camera:entryValues="@array/pref_camera_focusmode_entryvalues" camera:entries="@array/pref_camera_focusmode_entries" />
    <IconListPreference camera:title="@string/pref_camera_id_title" camera:visible="false" camera:key="pref_camera_id_key" camera:defaultValue="@string/pref_camera_id_default" camera:entries="@array/camera_id_entries" />
    <RecordLocationPreference camera:title="@string/pref_camera_recordlocation_title" camera:visible="false" camera:persist="true" camera:key="pref_camera_recordlocation_key" camera:defaultValue="@string/pref_camera_recordlocation_default" camera:entryValues="@array/pref_camera_recordlocation_entryvalues" camera:entries="@array/pref_camera_recordlocation_entries" camera:icons="@array/pref_camera_recordlocation_icons" />
    <IconListPreference camera:title="@string/pref_camera_capturemode_title" camera:visible="false" camera:key="pref_camera_capturemode_key" camera:help_flag="pref_camera_capturemode_help_entries" camera:defaultValue="@string/pref_camera_capturemode_default" camera:entryValues="@array/pref_camera_capturemode_entryvalues" camera:entries="@array/pref_camera_capturemode_entries" camera:mini_entries="@array/pref_camera_capturemode_mini_icons" camera:help_body="@array/pref_camera_capturemode_help_body" camera:largeIcons="@array/pref_camera_capturemode_icons" />
    <IconListPreference camera:title="@string/pref_camera_selfCamera_title" camera:visible="false" camera:persist="false" camera:key="pref_camera_selfCamera_key" camera:defaultValue="@string/pref_camera_selfCamera_default" camera:entryValues="@array/pref_camera_selfCamera_entryvalues" camera:entries="@array/pref_camera_selfCamera_entries" camera:icons="@array/pref_camera_selfCamera_icons" />
    <IconListPreference camera:title="@string/pref_camera_faceCamera_title" camera:visible="false" camera:persist="false" camera:key="pref_camera_faceCamera_key" camera:defaultValue="@string/pref_camera_faceCamera_default" camera:entryValues="@array/pref_camera_faceCamera_entryvalues" camera:entries="@array/pref_camera_faceCamera_entries" camera:icons="@array/pref_camera_faceCamera_btn_icons" camera:largeIcons="@array/pref_camera_faceCamera_icons" />
</PreferenceGroup>