<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup camera:type="NormalSetting" camera:title="@string/pref_camcorder_settings_category"
  xmlns:camera="http://schemas.android.com/apk/res/com.android.gallery3d">
    <IconListPreference camera:title="@string/pref_camera_scenemode_title" camera:persist="false" camera:key="pref_camera_scenemode_key" camera:defaultValue="@string/pref_camera_scenemode_default" camera:entryValues="@array/pref_camera_scenemode_entryvalues" camera:entries="@array/pref_camera_scenemode_entries" camera:icons="@array/pref_camera_scenemode_icons" />
    <IconListPreference camera:title="@string/pref_camera_whitebalance_title" camera:persist="false" camera:key="pref_camera_whitebalance_key" camera:defaultValue="@string/pref_camera_whitebalance_default" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:entries="@array/pref_camera_whitebalance_entries" camera:icons="@array/whitebalance_icons" />
    <IconListPreference camera:title="@string/pref_camera_video_stabilization_title" camera:persist="false" camera:key="pref_camera_video_stabilization_key" camera:defaultValue="@string/pref_camera_video_stabilization_default" camera:entryValues="@array/pref_camera_video_stabilization_entryvalues" camera:entries="@array/pref_camera_video_stabilization_entries" />
    <IconListPreference camera:title="@string/pref_camera_videosize_title" camera:persist="true" camera:key="pref_camera_videosize_key" camera:defaultValue="@string/pref_camera_videosize_default" camera:entryValues="@array/pref_camera_videosize_entryvalues" camera:entries="@array/pref_camera_videosize_entries" camera:icons="@array/pref_camera_videosize_icons" />
    <IconListPreference camera:title="@string/pref_camera_outputformat_title" camera:persist="true" camera:key="pref_camera_outputformat_key" camera:defaultValue="@string/pref_camera_outputformat_default" camera:entryValues="@array/pref_camera_outputformat_entryvalues" camera:entries="@array/pref_camera_outputformat_entries" camera:icons="@array/pref_camera_outputformat_icons" />
    <IconListPreference camera:title="@string/pref_camera_video_duration_title" camera:persist="false" camera:key="pref_camera_video_duration_key" camera:defaultValue="@string/pref_camera_video_duration_default" camera:entryValues="@array/pref_camera_video_duration_entryvalues" camera:entries="@array/pref_camera_video_duration_entries" camera:icons="@array/pref_camera_vide_duration_icons" />
    <IconListPreference camera:title="@string/pref_camera_restore_title" camera:persist="false" camera:key="pref_camera_restore_key" camera:defaultValue="@string/pref_camera_restore_default" camera:entryValues="@array/pref_camera_restore_entryvalues" camera:entries="@array/pref_camera_restore_entries" camera:icons="@array/pref_camera_restore_icons" />
    <IconListPreference camera:title="@string/pref_camera_flashmode_title" camera:visible="false" camera:persist="true" camera:key="pref_camera_video_flashmode_key" camera:defaultValue="@string/pref_camera_video_flashmode_default" camera:entryValues="@array/pref_camera_video_flashmode_entryvalues" camera:entries="@array/pref_camera_video_flashmode_entries" camera:icons="@array/video_flashmode_icons" />
    <IconListPreference camera:title="@string/pref_camera_id_title" camera:visible="false" camera:key="pref_camera_id_key" camera:defaultValue="@string/pref_camera_id_default" camera:entries="@array/camera_id_entries" />
    <RecordLocationPreference camera:title="@string/pref_camera_recordlocation_title" camera:visible="false" camera:persist="true" camera:key="pref_camera_recordlocation_key" camera:defaultValue="@string/pref_camera_recordlocation_default" camera:entryValues="@array/pref_camera_recordlocation_entryvalues" camera:entries="@array/pref_camera_recordlocation_entries" camera:icons="@array/pref_camera_recordlocation_icons" />
    <IconListPreference camera:title="@string/pref_camera_effect_title" camera:visible="false" camera:persist="false" camera:key="pref_camera_effect_key" camera:defaultValue="@string/pref_camera_effect_default" camera:entryValues="@array/pref_camera_effect_entryvalues" camera:entries="@array/pref_camera_effect_entries" camera:icons="@array/pref_camera_effect_icons" />
</PreferenceGroup>