<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup camera:type="NormalSetting" camera:title="@string/pref_camera_settings_category"
  xmlns:camera="http://schemas.android.com/apk/res/com.android.gallery3d">
    <IconListPreference camera:title="@string/pref_camera_capturemode_title" camera:visible="false" camera:key="pref_camera_capturemode_key" camera:help_flag="pref_camera_capturemode_help_entries" camera:defaultValue="@string/pref_camera_capturemode_default" camera:entryValues="@array/pref_camera_capturemode_entryvalues" camera:entries="@array/pref_camera_capturemode_entries" camera:mini_entries="@array/pref_camera_capturemode_mini_icons" camera:help_body="@array/pref_camera_capturemode_help_body" camera:largeIcons="@array/pref_camera_capturemode_icons" />
    <IconListPreference camera:title="@string/pref_camera_selfCamera_title" camera:visible="false" camera:persist="false" camera:key="pref_camera_selfCamera_key" camera:help_flag="pref_camera_capturemode_help_entries" camera:defaultValue="@string/pref_camera_selfCamera_default" camera:entryValues="@array/pref_camera_selfCamera_entryvalues" camera:entries="@array/pref_camera_selfCamera_entries" camera:icons="@array/pref_camera_selfCamera_icons" camera:mini_entries="@array/pref_camera_capturemode_mini_icons" camera:help_body="@array/pref_camera_capturemode_help_body" />
    <IconListPreference camera:title="@string/pref_camera_continuemode_title" camera:visible="false" camera:persist="false" camera:key="pref_camera_continuemode_key" camera:defaultValue="@string/pref_camera_continuemode_default" camera:entryValues="@array/pref_camera_continuemode_entryvalues" camera:entries="@array/pref_camera_continuemode_entries" camera:icons="@array/pref_camera_continuemode_icons" />
    <IconListPreference camera:title="@string/pref_camera_delay_title" camera:visible="false" camera:persist="false" camera:key="pref_camera_delay_key" camera:defaultValue="@string/pref_camera_delay_default" camera:entryValues="@array/pref_camera_delay_entryvalues" camera:entries="@array/pref_camera_delay_entries" camera:icons="@array/pref_camera_delay_icons" />
</PreferenceGroup>